--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -19,13 +19,22 @@ $round4: 0.4rem;
 @mixin dropdown-common {
     font-weight: $weight500 !important;
     color: $secondary1;
-    box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05),
-        0 1px 10px 0 rgba(63, 63, 68, 0.15);
     border-radius: 0.6rem;
     border: 0.1rem solid $secondary5;
+    max-width: 50rem;
+    max-height: 50rem;
+    overflow-y: auto;
+    box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05),
+        0 1px 10px 0 rgba(63, 63, 68, 0.15);
 
     & :hover {
         background-color: $secondary5;
         cursor: pointer;
     }
+}
+
+@mixin ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
